--- a/FRONTEND/forgotPassword.html
+++ b/FRONTEND/forgotPassword.html
@@ -75,7 +75,7 @@
             <div class="row">
                 <div class="col-lg-12">
                     <div class="intro-message">
-						<h1>Login</h1>
+						<h1>New Password</h1>
 						<br/>
 						<br/>
 						<form id="login" method="post" role="form" class="form-horizontal" action="">
@@ -86,22 +86,21 @@
 								</div>
 							</div>
 							<div class="form-group">
-								<label for="password" class="col-md-2 col-xs-offset-2 control-label">Password :</label>
+								<label for="password" class="col-md-2 col-xs-offset-2 control-label">New Password :</label>
 								<div class="col-md-4">
 									<input type="password" class="form-control" id="password" name="password" placeholder="Password" value="">
 								</div>
 							</div>
+							<div class="form-group">
+								<label for="password" class="col-md-2 col-xs-offset-2 control-label">Confirm Password :</label>
+								<div class="col-md-4">
+									<input type="password" class="form-control" id="password" name="password" placeholder="Re-enter Password" value="">
+								</div>
+							</div>
 							<hr class="intro-divider">
-							
-							<div class="row text-center">
-								<div class="form-group">
-									<div class="col-md-1 col-xs-offset-4">
-										<button type="submit" class="btn btn-success">Log in</button>
-									</div>
-
-									<div class="col-md-1">
-										<button type="button" id="changePassword" class="btn btn-primary" onclick="location.href = 'forgotPassword.html'">Forgot Password</button>
-									</div>
+							<div class="form-group">
+								<div class="col-md-5 col-xs-offset-2 control-labe">
+									<button type="submit" class="btn btn-success">Submit</button>
 								</div>
 							</div>
 						</form>
