--- a/FRONTEND/index.html
+++ b/FRONTEND/index.html
@@ -93,16 +93,9 @@
 							</div>
 							<hr class="intro-divider">
 							
-							<div class="row text-center">
-								<div class="form-group">
-									<div class="col-md-1 col-xs-offset-4">
-										<button type="submit" class="btn btn-success">Log in</button>
-									</div>
-
-									<div class="col-md-1">
-										<button type="button" id="changePassword" class="btn btn-primary" onclick="location.href = 'forgotPassword.html'">Forgot Password</button>
-									</div>
-								</div>
+							<div class="form-group">
+								<button type="submit" class="btn btn-success">Log in</button>
+								<button type="button" id="changePassword" class="btn btn-primary col-xs-offset-2" onclick="location.href = 'forgotPassword.html'">Forgot Password</button>
 							</div>
 						</form>
                     </div>
@@ -130,7 +123,7 @@
                         </li>
                         <li class="footer-menu-divider">&sdot;</li>
                         <li>
-                            <a href="#services">Services</a>
+                            <a href="#services">Register</a>
                         </li>
                         <li class="footer-menu-divider">&sdot;</li>
                         <li>
