UI compatible for smaller browsers

--- a/FRONTEND/forgotPassword.html
+++ b/FRONTEND/forgotPassword.html
@@ -80,28 +80,26 @@
 						<br/>
 						<form id="login" method="post" role="form" class="form-horizontal" action="">
 							<div class="form-group">
-								<label class="col-md-2 col-xs-offset-2 control-label" for="username">User Name :</label>
-								<div class="col-md-4">
+								<label class="control-label col-sm-4" for="username">User Name :</label>
+								<div class="col-sm-4">
 									<input type="text" class="form-control" id="username" name="username" placeholder="Username" value="">
 								</div>
 							</div>
 							<div class="form-group">
-								<label for="password" class="col-md-2 col-xs-offset-2 control-label">New Password :</label>
-								<div class="col-md-4">
-									<input type="password" class="form-control" id="password" name="password" placeholder="Password" value="">
+								<label for="password" class="control-label col-sm-4">New Password :</label>
+								<div class="col-sm-4">
+									<input type="password" class="form-control" id="password" name="password" placeholder="New Password" value="">
 								</div>
 							</div>
 							<div class="form-group">
-								<label for="password" class="col-md-2 col-xs-offset-2 control-label">Confirm Password :</label>
-								<div class="col-md-4">
+								<label for="password" class="control-label col-sm-4">Confirm Password :</label>
+								<div class="col-sm-4">
 									<input type="password" class="form-control" id="password" name="password" placeholder="Re-enter Password" value="">
 								</div>
 							</div>
 							<hr class="intro-divider">
 							<div class="form-group">
-								<div class="col-md-5 col-xs-offset-2 control-labe">
-									<button type="submit" class="btn btn-success">Submit</button>
-								</div>
+								<button type="submit" class="btn btn-success">Submit</button>
 							</div>
 						</form>
                     </div>
@@ -129,14 +127,14 @@
                         </li>
                         <li class="footer-menu-divider">&sdot;</li>
                         <li>
-                            <a href="#services">Services</a>
+                            <a href="#services">Register</a>
                         </li>
                         <li class="footer-menu-divider">&sdot;</li>
                         <li>
                             <a href="#contact">Contact</a>
                         </li>
                     </ul>
-                    <p class="copyright text-muted small">Copyright &copy; Your Company 2014. All Rights Reserved</p>
+                    <p class="copyright text-muted small">SOEN 387 - Reservation UI</p>
                 </div>
             </div>
         </div>
