--- a/FRONTEND/index.html
+++ b/FRONTEND/index.html
@@ -80,19 +80,18 @@
 						<br/>
 						<form id="login" method="post" role="form" class="form-horizontal" action="">
 							<div class="form-group">
-								<label class="col-md-2 col-xs-offset-2 control-label" for="username">User Name :</label>
-								<div class="col-md-4">
+								<label class="control-label col-sm-4" for="username">User Name :</label>
+								<div class="col-sm-4">
 									<input type="text" class="form-control" id="username" name="username" placeholder="Username" value="">
 								</div>
 							</div>
 							<div class="form-group">
-								<label for="password" class="col-md-2 col-xs-offset-2 control-label">Password :</label>
-								<div class="col-md-4">
+								<label for="password" class="control-label col-sm-4">Password :</label>
+								<div class="col-sm-4">
 									<input type="password" class="form-control" id="password" name="password" placeholder="Password" value="">
 								</div>
 							</div>
 							<hr class="intro-divider">
-							
 							<div class="form-group">
 								<button type="submit" class="btn btn-success">Log in</button>
 								<button type="button" id="changePassword" class="btn btn-primary col-xs-offset-2" onclick="location.href = 'forgotPassword.html'">Forgot Password</button>
@@ -130,7 +129,7 @@
                             <a href="#contact">Contact</a>
                         </li>
                     </ul>
-                    <p class="copyright text-muted small">Copyright &copy; Your Company 2014. All Rights Reserved</p>
+                    <p class="copyright text-muted small">SOEN 387 - Reservation UI</p>
                 </div>
             </div>
         </div>
