added password hash -> pop-up at login

--- a/FRONTEND/index.html
+++ b/FRONTEND/index.html
@@ -17,6 +17,9 @@
     <!-- Custom CSS -->
     <link href="css/landing-page.css" rel="stylesheet">
 
+    <!-- jquery UI -->
+    <link href="css/jquery-ui.css" rel="stylesheet">
+
     <!-- Custom Fonts -->
     <link href="font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
     <link href="https://fonts.googleapis.com/css?family=Lato:300,400,700,300italic,400italic,700italic" rel="stylesheet" type="text/css">
@@ -93,7 +96,8 @@
 							</div>
 							<hr class="intro-divider">
 							<div class="form-group">
-								<button type="submit" class="btn btn-success">Log in</button>
+                                <!-- add hashing of password -->
+								<button type="submit" class="btn btn-success" id="login_button">Log in</button>
 								<button type="button" id="changePassword" class="btn btn-primary col-xs-offset-2" onclick="location.href = 'forgotPassword.html'">Forgot Password</button>
 							</div>
 						</form>
@@ -135,11 +139,34 @@
         </div>
     </footer>
 
+    <!-- password hash will be displayed in this pop-up -->
+    <div id="dialog" title="Password Hash"></div>
+
     <!-- jQuery -->
     <script src="js/jquery.js"></script>
 
+    <!-- jQuery -->
+    <script src="js/jquery-ui.js"></script>
+
     <!-- Bootstrap Core JavaScript -->
     <script src="js/bootstrap.min.js"></script>
+
+    <!-- CryptoJS -->
+    <script src="js/sha256.js"></script>
+
+    <script>
+
+    $(document).ready(function() {
+        $("#login_button").click(function() {
+            var password = $("#password").val();
+            // hash password using 256
+            var hashedPassword = CryptoJS.SHA256(password);
+            var message = "Password: " + password + "\n" + "Hashed: " + hashedPassword;
+            alert(message);
+        });
+    });
+
+    </script>
 
 </body>
 
