--- a/FRONTEND/index.html
+++ b/FRONTEND/index.html
@@ -12,16 +12,12 @@
     <title>Resource Mangement System</title>
 
     <!-- Bootstrap Core CSS -->
-    <link href="css/bootstrap.min.css" rel="stylesheet">
+    <link href="bower_components/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">
 
     <!-- Custom CSS -->
     <link href="css/landing-page.css" rel="stylesheet">
 
-    <!-- jquery UI -->
-    <link href="css/jquery-ui.css" rel="stylesheet">
-
     <!-- Custom Fonts -->
-    <link href="font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
     <link href="https://fonts.googleapis.com/css?family=Lato:300,400,700,300italic,400italic,700italic" rel="stylesheet" type="text/css">
 
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
@@ -143,19 +139,16 @@
     <div id="dialog" title="Password Hash"></div>
 
     <!-- jQuery -->
-    <script src="js/jquery.js"></script>
-
-    <!-- jQuery -->
-    <script src="js/jquery-ui.js"></script>
+    <script src="bower_components/jquery/dist/jquery.min.js"></script>
 
     <!-- Bootstrap Core JavaScript -->
-    <script src="js/bootstrap.min.js"></script>
+    <script src="bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
 
     <!-- CryptoJS -->
-    <script src="js/sha256.js"></script>
+    <script src="bower_components/crypto-js/crypto-js.js"></script>
 
     <script>
-        
+
     $(document).ready(function() {
         $("#login_button").click(function() {
             var password = $("#password").val();
