--- a/FRONTEND/index.html
+++ b/FRONTEND/index.html
@@ -51,7 +51,7 @@
                         <a href="#about">Reserve</a>
                     </li>
                     <li>
-                        <a href="#services">View</a>
+                        <a href="view.html">View</a>
                     </li>
                     <li>
                         <a href="#contact">Change</a>
