--- a/FRONTEND/forgotPassword.html
+++ b/FRONTEND/forgotPassword.html
@@ -88,18 +88,18 @@
 							<div class="form-group">
 								<label for="password" class="control-label col-sm-4">New Password :</label>
 								<div class="col-sm-4">
-									<input type="password" class="form-control" id="password" name="password" placeholder="New Password" value="">
+									<input type="password" class="form-control" id="new_password" name="password" placeholder="New Password" value="">
 								</div>
 							</div>
 							<div class="form-group">
 								<label for="password" class="control-label col-sm-4">Confirm Password :</label>
 								<div class="col-sm-4">
-									<input type="password" class="form-control" id="password" name="password" placeholder="Re-enter Password" value="">
+									<input type="password" class="form-control" id="confirm_password" name="password" placeholder="Re-enter Password" value="">
 								</div>
 							</div>
 							<hr class="intro-divider">
 							<div class="form-group">
-								<button type="submit" class="btn btn-success">Submit</button>
+								<button type="submit" class="btn btn-success" id="submit_button">Submit</button>
 							</div>
 						</form>
                     </div>
@@ -140,11 +140,38 @@
         </div>
     </footer>
 
-    <!-- jQuery -->
+    <!-- password hash will be displayed in this pop-up -->
+    <div id="dialog" title="Password Hash"></div>
+	
+	<!-- jQuery -->
     <script src="bower_components/jquery/dist/jquery.min.js"></script>
 
     <!-- Bootstrap Core JavaScript -->
     <script src="bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
+	
+    <!-- CryptoJS -->
+    <script src="bower_components/crypto-js/crypto-js.js"></script>
+
+    <script>
+
+    $(document).ready(function() {
+        $("#submit_button").click(function() {
+            var newPassword = $("#new_password").val();
+			var confirmPassword = $("#confirm_password").val();
+			var message ="";
+            if(newPassword != confirmPassword)
+				message = "ERROR: Passwords do not match!";
+			else
+			{
+				// hash password using 256
+				var hashedPassword = CryptoJS.SHA256(newPassword);
+				message = "Password: " + newPassword + "\n" + "Hashed: " + hashedPassword;
+			}
+			alert(message);
+        });
+    });
+
+    </script>
 
 </body>
 
