Required tags and checks
- Added required tags to the following inputs:
index.html: username and password
forgotPassword.html: username, new_password and confrim_password
EventCreation.html: eventName and datetimepicker4

- Modified script on all pages so that if required fields are left
blank, a popup window appears and the form submit is cancelled (so that
input is not deleted). This is for safari users where required tag is
not supported.

--- a/FRONTEND/forgotPassword.html
+++ b/FRONTEND/forgotPassword.html
@@ -82,19 +82,19 @@
 							<div class="form-group">
 								<label class="control-label col-sm-4" for="username">User Name :</label>
 								<div class="col-sm-4">
-									<input type="text" class="form-control" id="username" name="username" placeholder="Username" value="">
+									<input type="text" class="form-control" id="username" name="username" placeholder="Username" value="" required>
 								</div>
 							</div>
 							<div class="form-group">
 								<label for="password" class="control-label col-sm-4">New Password :</label>
 								<div class="col-sm-4">
-									<input type="password" class="form-control" id="new_password" name="password" placeholder="New Password" value="">
+									<input type="password" class="form-control" id="new_password" name="password" placeholder="New Password" value="" required>
 								</div>
 							</div>
 							<div class="form-group">
 								<label for="password" class="control-label col-sm-4">Confirm Password :</label>
 								<div class="col-sm-4">
-									<input type="password" class="form-control" id="confirm_password" name="password" placeholder="Re-enter Password" value="">
+									<input type="password" class="form-control" id="confirm_password" name="password" placeholder="Re-enter Password" value="" required>
 								</div>
 							</div>
 							<hr class="intro-divider">
@@ -155,12 +155,22 @@
     <script>
 
     $(document).ready(function() {
-        $("#submit_button").click(function() {
-            var newPassword = $("#new_password").val();
+        $("#submit_button").click(function(event) {
+            var userName = $("#username").val();
+			var newPassword = $("#new_password").val();
 			var confirmPassword = $("#confirm_password").val();
 			var message ="";
-            if(newPassword != confirmPassword)
+			// popup window for safari users
+			if (userName == "" || newPassword == "" || confirmPassword == "")
+			{	
+				message = "Please fill in all fields";
+				event.preventDefault();
+			}
+            else if(newPassword != confirmPassword)
+			{
 				message = "ERROR: Passwords do not match!";
+				event.preventDefault();
+			}
 			else
 			{
 				// hash password using 256
