--- a/FRONTEND/EventCreation.html
+++ b/FRONTEND/EventCreation.html
@@ -87,7 +87,7 @@
     <div class="form-group">
     <div style="text-align:center;font-size:150%"><label>Event Info</label><br/></div>
     <label for="eventnName">Name:</label>
-    <input type="text" class="form-control" id="eventName" placeholder="Event Title">
+    <input type="text" class="form-control" id="eventName" placeholder="Event Title" required>
   </div>
   <div class="form-group">
     <label for="eventURL">URL:</label>
@@ -96,10 +96,10 @@
     <div class="form-group">
         <label for="dateTime">Time and Date:</label>
   
-            <input type='text' class="form-control" id='datetimepicker4' />
+            <input type='text' class="form-control" id='datetimepicker4' required/>
    
         </div>
-  <button type="submit" class="btn btn-default btn-submit">Submit</button>
+  <button type="submit" class="btn btn-default btn-submit" id="submit_button">Submit</button>
   <button type="reset" class="btn btn-default">Reset</button>
   <button type="button" class="btn btn-default btn-delete">Delete</button>
     </div>
@@ -167,12 +167,13 @@
     <script>
 
     $(document).ready(function() {
-        $("#login_button").click(function() {
-            var password = $("#password").val();
-            // hash password using 256
-            var hashedPassword = CryptoJS.SHA256(password);
-            var message = "Password: " + password + "\n" + "Hashed: " + hashedPassword;
-            alert(message);
+        $("#submit_button").click(function(event) {
+            // popup window for safari users
+			if ($("#eventName").val() == "" || $("#datetimepicker4").val() == "")
+			{
+				alert("Please fill in all fields");
+				event.preventDefault();
+			}
         });
     });
 
