--- a/FRONTEND/index.html
+++ b/FRONTEND/index.html
@@ -81,13 +81,13 @@
 							<div class="form-group">
 								<label class="control-label col-sm-4" for="username">User Name :</label>
 								<div class="col-sm-4">
-									<input type="text" class="form-control" id="username" name="username" placeholder="Username" value="">
+									<input type="text" class="form-control" id="username" name="username" placeholder="Username" value="" required>
 								</div>
 							</div>
 							<div class="form-group">
 								<label for="password" class="control-label col-sm-4">Password :</label>
 								<div class="col-sm-4">
-									<input type="password" class="form-control" id="password" name="password" placeholder="Password" value="">
+									<input type="password" class="form-control" id="password" name="password" placeholder="Password" value="" required>
 								</div>
 							</div>
 							<hr class="intro-divider">
@@ -148,14 +148,23 @@
     <script src="bower_components/crypto-js/crypto-js.js"></script>
 
     <script>
-
-    $(document).ready(function() {
-        $("#login_button").click(function() {
-            var password = $("#password").val();
-            // hash password using 256
-            var hashedPassword = CryptoJS.SHA256(password);
-            var message = "Password: " + password + "\n" + "Hashed: " + hashedPassword;
-            alert(message);
+	
+	$(document).ready(function() {
+        $("#login_button").click(function(event) {
+            // popup window for safari users
+			if ($("#password").val() == "" || $("#username").val() == "")
+			{
+				alert("Please fill in all fields");
+				event.preventDefault();
+			}
+			else
+			{
+				var password = $("#password").val();
+				// hash password using 256
+				var hashedPassword = CryptoJS.SHA256(password);
+				var message = "Password: " + password + "\n" + "Hashed: " + hashedPassword;
+				alert(message);
+			}
         });
     });
 
