--- a/FRONTEND/forgotPassword.html
+++ b/FRONTEND/forgotPassword.html
@@ -43,13 +43,13 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand topnav" href="#">Home</a>
+                <a class="navbar-brand topnav" href="index.html">Home</a>
             </div>
             <!-- Collect the nav links, forms, and other content for toggling -->
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav navbar-right">
                     <li>
-                        <a href="#about">Reserve</a>
+                        <a href="EventCreation.html">Reserve</a>
                     </li>
                     <li>
                         <a href="view.html">View</a>
@@ -75,33 +75,33 @@
             <div class="row">
                 <div class="col-lg-12">
                     <div class="intro-message">
-						<h1>New Password</h1>
-						<br/>
-						<br/>
-						<form id="login" method="post" role="form" class="form-horizontal" action="">
-							<div class="form-group">
-								<label class="control-label col-sm-4" for="username">User Name :</label>
-								<div class="col-sm-4">
-									<input type="text" class="form-control" id="username" name="username" placeholder="Username" value="">
-								</div>
-							</div>
-							<div class="form-group">
-								<label for="password" class="control-label col-sm-4">New Password :</label>
-								<div class="col-sm-4">
-									<input type="password" class="form-control" id="password" name="password" placeholder="New Password" value="">
-								</div>
-							</div>
-							<div class="form-group">
-								<label for="password" class="control-label col-sm-4">Confirm Password :</label>
-								<div class="col-sm-4">
-									<input type="password" class="form-control" id="password" name="password" placeholder="Re-enter Password" value="">
-								</div>
-							</div>
-							<hr class="intro-divider">
-							<div class="form-group">
-								<button type="submit" class="btn btn-success">Submit</button>
-							</div>
-						</form>
+                        <h1>New Password</h1>
+                        <br/>
+                        <br/>
+                        <form id="login" method="post" role="form" class="form-horizontal" action="">
+                            <div class="form-group">
+                                <label class="control-label col-sm-4" for="username">User Name :</label>
+                                <div class="col-sm-4">
+                                    <input type="text" class="form-control" id="username" name="username" placeholder="Username" value="" required>
+                                </div>
+                            </div>
+                            <div class="form-group">
+                                <label for="password" class="control-label col-sm-4">New Password :</label>
+                                <div class="col-sm-4">
+                                    <input type="password" class="form-control" id="new_password" name="password" placeholder="New Password" value="" required>
+                                </div>
+                            </div>
+                            <div class="form-group">
+                                <label for="password" class="control-label col-sm-4">Confirm Password :</label>
+                                <div class="col-sm-4">
+                                    <input type="password" class="form-control" id="confirm_password" name="password" placeholder="Re-enter Password" value="" required>
+                                </div>
+                            </div>
+                            <hr class="intro-divider">
+                            <div class="form-group">
+                                <button type="submit" class="btn btn-success" id="submit_button">Submit</button>
+                            </div>
+                        </form>
                     </div>
                 </div>
             </div>
@@ -140,11 +140,48 @@
         </div>
     </footer>
 
+    <!-- password hash will be displayed in this pop-up -->
+    <div id="dialog" title="Password Hash"></div>
+    
     <!-- jQuery -->
     <script src="bower_components/jquery/dist/jquery.min.js"></script>
 
     <!-- Bootstrap Core JavaScript -->
     <script src="bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
+    
+    <!-- CryptoJS -->
+    <script src="bower_components/crypto-js/crypto-js.js"></script>
+
+    <script>
+
+    $(document).ready(function() {
+        $("#submit_button").click(function(event) {
+            var userName = $("#username").val();
+            var newPassword = $("#new_password").val();
+            var confirmPassword = $("#confirm_password").val();
+            var message ="";
+            // popup window for safari users
+            if (userName == "" || newPassword == "" || confirmPassword == "")
+            {   
+                message = "Please fill in all fields";
+                event.preventDefault();
+            }
+            else if(newPassword != confirmPassword)
+            {
+                message = "ERROR: Passwords do not match!";
+                event.preventDefault();
+            }
+            else
+            {
+                // hash password using 256
+                var hashedPassword = CryptoJS.SHA256(newPassword);
+                message = "Password: " + newPassword + "\n" + "Hashed: " + hashedPassword;
+            }
+            alert(message);
+        });
+    });
+
+    </script>
 
 </body>
 
