Added to event creation + random touchups

--- a/FRONTEND/forgotPassword.html
+++ b/FRONTEND/forgotPassword.html
@@ -55,10 +55,10 @@
                         <a href="view.html">View</a>
                     </li>
                     <li>
-                        <a href="#contact">Change</a>
+                        <a href="#contact">Contact</a>
                     </li>
                     <li>
-                        <a href="#contact">Cancel</a>
+                        <a href="#contact">Logout</a>
                     </li>
                 </ul>
             </div>
