--- a/FRONTEND/index.html
+++ b/FRONTEND/index.html
@@ -54,10 +54,10 @@
                         <a href="view.html">View</a>
                     </li>
                     <li>
-                        <a href="#">Change</a>
+                        <a href="#contact">Contact</a>
                     </li>
                     <li>
-                        <a href="#">Cancel</a>
+                        <a href="#contact">Logout</a>
                     </li>
                 </ul>
             </div>
