--- a/FRONTEND/EventCreation.html
+++ b/FRONTEND/EventCreation.html
@@ -112,7 +112,7 @@
         
     <span style="color:red;">Dev Note: </span>start/end times chosen first, then available resources displayed
     <br />  <br />  
-    <div>
+    <div class="lst-resource">
     <label for="ResRoom">Rooms to Reserve:</label><br />
     <select class="form-group list-wrapper" id="ResRoom" name="Rooms" size="5" multiple>
     <option class="form-control" value="" >Board Room</option>
@@ -123,7 +123,7 @@
     <option class="form-control" value="" selected>Parking Lot</option>
     </select>
     </div>
-    <div>
+    <div class="lst-resource">
     <label for="ResTool">Tools to Reserve:</label><br />
     <select class="form-group list-wrapper" id="ResTool" name="Tools" size="5" multiple>
     <option class="form-control" value="">Projector</option>
@@ -134,7 +134,7 @@
     <option class="form-control" value="" selected>Radio</option>
     </select>
     </div>
-    <div>
+    <div class="lst-resource">
     <label for="ResEmp">People to Book</label><br />
     <select class="form-group list-wrapper" id="ResEmp" name="Tools" size="5" multiple>
     <option class="form-control" value="" selected>President Roger</option>
