fixed pop-up with start and end events

--- a/FRONTEND/EventCreation.html
+++ b/FRONTEND/EventCreation.html
@@ -115,34 +115,34 @@
     <div class="lst-resource">
     <label for="ResRoom">Rooms to Reserve:</label><br />
     <select class="form-group list-wrapper" id="ResRoom" name="Rooms" size="5" multiple>
-    <option class="form-control" value="" >Board Room</option>
-    <option class="form-control" value="" >Classroom</option>
-    <option class="form-control" value="">Bathroom</option>
-    <option class="form-control" value="" selected>Conference Room</option>
-    <option class="form-control" value="" selected>Lunch Room</option>
-    <option class="form-control" value="" selected>Parking Lot</option>
+    <option class="form-control" value="Board Room" >Board Room</option>
+    <option class="form-control" value="Classroom" >Classroom</option>
+    <option class="form-control" value="Bathroom">Bathroom</option>
+    <option class="form-control" value="Conference Room" selected>Conference Room</option>
+    <option class="form-control" value="Lunch Room" selected>Lunch Room</option>
+    <option class="form-control" value="Parking Lot" selected>Parking Lot</option>
     </select>
     </div>
     <div class="lst-resource">
     <label for="ResTool">Tools to Reserve:</label><br />
     <select class="form-group list-wrapper" id="ResTool" name="Tools" size="5" multiple>
-    <option class="form-control" value="">Projector</option>
-    <option class="form-control" value="" selected>Smart board</option>
-    <option class="form-control" value="">TV</option>
-    <option class="form-control" value="">Laptop</option>
-    <option class="form-control" value="" selected>Office Chairs</option>
-    <option class="form-control" value="" selected>Radio</option>
+    <option class="form-control" value="Projector">Projector</option>
+    <option class="form-control" value="Smart board" selected>Smart board</option>
+    <option class="form-control" value="TV">TV</option>
+    <option class="form-control" value="Laptop">Laptop</option>
+    <option class="form-control" value="Office Chairs" selected>Office Chairs</option>
+    <option class="form-control" value="Radio" selected>Radio</option>
     </select>
     </div>
     <div class="lst-resource">
     <label for="ResEmp">People to Book</label><br />
-    <select class="form-group list-wrapper" id="ResEmp" name="Tools" size="5" multiple>
-    <option class="form-control" value="" selected>President Roger</option>
-    <option class="form-control" value="" selected>IT guy Josh</option>
-    <option class="form-control" value="">Salesman Daniel</option>
-    <option class="form-control" value="">Consultant Steven</option>
-    <option class="form-control" value="">Janitor Bob</option>
-    <option class="form-control" value="" selected>Finance Janice</option>
+    <select class="form-group list-wrapper" id="ResEmp" name="People" size="5" multiple>
+    <option class="form-control" value="President Roger" selected>President Roger</option>
+    <option class="form-control" value="IT guy Josh" selected>IT guy Josh</option>
+    <option class="form-control" value="Salesman Daniel">Salesman Daniel</option>
+    <option class="form-control" value="Consultant Steven">Consultant Steven</option>
+    <option class="form-control" value="Janitor Bob">Janitor Bob</option>
+    <option class="form-control" value="Finance Janice" selected>Finance Janice</option>
     </select>
     </div>
   <button type="submit" class="btn btn-default btn-submit" id="submit_button">Submit</button>
@@ -226,7 +226,14 @@
 			}
             else
             {
-                alert($("#eventName").val() + '\n' + $("#eventURL").val() + '\n' + $("#datetimepicker4").val());
+                alert($("#eventName").val() + '\n' + $("#eventURL").val() + 
+                    '\nStartTime: ' + $("#starttimepicker").val() + 
+                    '\nEndTime: ' +  $("#endtimepicker").val()  +
+                    '\nRooms: ' +  $("#ResRoom").val()  +
+                    '\nEquipments: ' +  $("#ResTool").val()  +
+                    '\nBook to: ' +  $("#ResEmp").val() 
+
+                );
             }
         });
     });
